# python_architecture

./: .gitignore  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
grocery/application/factories/: grocery_list.py  user.py
grocery/application/repositories/: __init__.py  grocery_list.py  user.py
grocery/application/services/: __init__.py  create_user.py  list_users.py
grocery/domain/models/: __init__.py  grocery_list.py  user.py
grocery/infrastructure/: db.py
grocery/presentation/api/: __init__.py  serializer.py
grocery/presentation/cli/: cli.py
migrations/: env.py
migrations/versions/: b0ec6fc98f2a_create_tables.py
tests/grocery/domain/models/: test_user.py
