[tool.poetry]
name = "grocery"
version = "0.1.0"
description = ""
authors = ["Nathan Barraillé <nathan.barraille@gmail.com>"]
packages = [
    { include = "grocery"},
]

[tool.poetry.dependencies]
python = "^3.8"
black = "^19.10b0"
sqlalchemy = "^1.3.15"
pytest = "^5.4.1"
click = "^7.1.1"
psycopg2-binary = "^2.8.4"
alembic = "^1.4.2"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
